--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "crypto-js": "^3.1.6",
     "express": "^4.16.2",
+    "jsonwebtoken": "^7.1.9",
     "lodash": "^4.17.4",
     "mongodb": "^3.0.2",
-    "mongoose": "^5.0.5"
+    "mongoose": "^5.0.5",
+    "validator": "^5.6.0"
   },
   "devDependencies": {
     "expect": "^22.3.0",
